@@ -160,14 +160,14 @@ class HelpIndex
 	/**
 	 * Reads the specified HTML file and adds all words defined therein to the
 	 * index.
-	 * @param url The HTML file's URL
+	 * @param path The HTML file's URL or path
 	 */
 	public void indexURL(String path) throws Exception
 	{
-		URL url;		
+		URL url;
 		if (MiscUtilities.isURL(path))
 			url = new URL(path);
-		else 
+		else
 		{
 			File f = new File(path);
 			url = f.toURI().toURL();
